@@ -25,7 +25,7 @@
  */
 
 /*
- * $Id: security-util.c,v 1.25 2006/07/22 12:04:47 martinea Exp $
+ * $Id: security-util.c,v 1.25.2.1 2006/09/28 18:46:08 martinea Exp $
  *
  * sec-security.c - security and transport over sec or a sec-like command.
  *
@@ -599,7 +599,7 @@ tcpma_stream_client(
 
     if (id <= 0) {
 	security_seterror(&rh->sech,
-	    "%hd: invalid security stream id", id);
+	    "%d: invalid security stream id", id);
 	return (NULL);
     }
 
@@ -619,7 +619,7 @@ tcpma_stream_client(
 	rh->rc = rs->rc;
     }
 
-    secprintf(("%s: sec: stream_client: connected to stream %hd\n",
+    secprintf(("%s: sec: stream_client: connected to stream %d\n",
 	       debug_prefix_time(NULL), id));
 
     return (rs);
@@ -1237,8 +1237,8 @@ udp_inithandle(
     /*
      * Save the hostname and port info
      */
-    secprintf(("%s: udp_inithandle port %hd handle %s sequence %d\n",
-	       debug_prefix_time(NULL), ntohs(port),
+    secprintf(("%s: udp_inithandle port %hu handle %s sequence %d\n",
+	       debug_prefix_time(NULL), (in_port_t)ntohs(port),
 	       handle, sequence));
     assert(he != NULL);
 
@@ -2379,7 +2379,8 @@ check_security(
     if (ntohs(addr->sin_port) >= IPPORT_RESERVED) {
 	char number[NUM_STR_SIZE];
 
-	snprintf(number, SIZEOF(number), "%hd", (short)ntohs(addr->sin_port));
+	snprintf(number, SIZEOF(number), "%hu",
+		 (in_port_t)ntohs(addr->sin_port));
 	*errstr = vstralloc("[",
 			    "host ", remotehost, ": ",
 			    "port ", number, " not secure",
