@@ -1,3 +1,7 @@
+2006-09-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/bsd-security.c: Fix %hd printf argument format.
+	* common-src/security-util.c: Fix %hd printf argument format.
+
 2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* Amanda 2.5.1p1 released.
 	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p1).
